--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "cropperjs": "^1.6.1",
     "vue": "^3.5.13",
+    "vue-advanced-cropper": "^2.8.9",
+    "vue-cropperjs": "^5.0.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
