--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "cropperjs": "^1.6.1",
+    "leaflet": "^1.9.4",
     "vue": "^3.5.13",
     "vue-advanced-cropper": "^2.8.9",
     "vue-cropperjs": "^5.0.0",
